# portfolio-monorepo

./: README.md  docker-compose.local.yml  docker-compose.yml
.github/workflows/: deploy.yml  test.yml
backend-java/: Dockerfile  pom.xml
backend-java/src/main/java/com/example/demo/: AppConfig.java  DemoApplication.java  GitHubController.java  GitHubService.java  InfrastructureController.java
backend-java/src/main/java/com/matt/portfolio/: AppConfig.java  DemoApplication.java  (+7 more)
backend-java/src/main/resources/: application.properties  logback-spring.xml
backend-rust/: .env.example  Cargo.toml  Dockerfile
backend-rust/src/: handlers.rs  main.rs  models.rs  utils.rs
backend-rust/src/services/: mod.rs  network_monitor.rs  spotify_client.rs  system_monitor.rs
frontend-react/: .dockerignore  .env.example  Dockerfile  index.html  package-lock.json  package.json  vitest.config.js
frontend-react/src/: App.jsx  GitHubActivity.jsx  api.js  config.json  constants.js  index.css
frontend-react/src/__tests__/: GitHubActivity.test.jsx  Sparkline.test.jsx  SpotifyPlayer.test.jsx  api.test.js  useTelemetry.test.js
frontend-react/src/components/: Sparkline.jsx  SpotifyPlayer.jsx  TerminalSimulator.jsx  TopologyNode.jsx
frontend-react/src/hooks/: useSpotify.js  useTelemetry.js
infrastructure/k8s/: blackbox-exporter.yaml  frontend.yaml  ingress.yaml  java-api.yaml  kustomization.yaml  network-policies.yaml  pdb.yaml  rust-api.yaml
infrastructure/nginx/: mattdev0.tech.conf  portfolio-locations.conf
k8s/: frontend.yaml  java-api.yaml  namespace.yaml  rust-api.yaml
(+6 files in other folders)
