[package]
name = "backend-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
base64 = "0.22.1"
dotenvy = "0.15.7"
reqwest = { version = "0.13.3", features = ["form", "json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.39.1"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
tower-http = { version = "0.6.10", features = ["cors", "trace"] }

[dev-dependencies]
wiremock = "0.6.2"

